Cleaning up some more